Added Mapbox GL map.

--- a/src/pages/map/map.scss
+++ b/src/pages/map/map.scss
@@ -1,3 +1,11 @@
-page-map {
+@import 'mapbox-gl/mapbox-gl.css';
 
+page-map {
+  .scroll-content {
+    height: 100%;
+    position: relative;
+  }
+  #map {
+    height: 100%;
+  }
 }
