Reuse the same map for better performance.

--- a/src/pages/map/map.scss
+++ b/src/pages/map/map.scss
@@ -4,7 +4,9 @@ page-map {
     position: relative;
   }
   #map {
+    position: relative;
     height: 100%;
+    width: 100%;
   }
   /* Map popup */
   .mapboxgl-popup {
