Added trip statistics bar.

--- a/src/pages/map/map.scss
+++ b/src/pages/map/map.scss
@@ -8,6 +8,38 @@ page-map {
     height: 100%;
     width: 100%;
   }
+  #trip-stats {
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    & > span {
+      box-sizing: border-box;
+      color: white;
+      display: block;
+      float: left;
+      font-size: 1.9rem;
+      padding: 0.4em 0.1em;
+      text-align: center;
+    }
+    .activity {
+      background-color: #680caa;
+      width: 20%;
+    }
+    .duration,
+    .distance {
+      width: 40%;
+      .icon {
+        margin-right: 0.25em;
+      }
+    }
+    .duration {
+      background-color: #0c6aaa;
+    }
+    .distance {
+      background-color: #2faa0c;
+    }
+  }
   /* Map popup */
   .mapboxgl-popup {
     max-width: 80%;
