--- a/src/pages/stats/stats.scss
+++ b/src/pages/stats/stats.scss
@@ -1,3 +1,10 @@
 page-stats {
-
+  x-chartist {
+    display: block;
+    height: 300px;
+    margin-top: 15px;
+  }
+  .ct-label {
+    font-size: 1.5rem;
+  }
 }
