--- a/src/pages/stats/stats.scss
+++ b/src/pages/stats/stats.scss
@@ -1,7 +1,8 @@
 page-stats {
   .chart-wrapper {
-    height: 40%;
-    margin-top: 15px;
+    height: 300px;
+    margin: 15px;
+    padding: 0 0 0.9em 0.9em;
     position: relative;
   }
   x-chartist {
@@ -10,5 +11,25 @@ page-stats {
   }
   .ct-label {
     font-size: 1.5rem;
+  }
+  .chart-xaxis-label {
+    bottom: 0;
+    font-size: 0.9em;
+    font-weight: bold;
+    left: 0;
+    position: absolute;
+    text-align: center;
+    width: 100%;
+  }
+  .chart-yaxis-label {
+    font-size: 0.9em;
+    font-weight: bold;
+    left: -300px;
+    position: absolute;
+    text-align: center;
+    top: 0;
+    transform: rotate(270deg);
+    transform-origin: 100% 0;
+    width: 300px;
   }
 }
