--- a/src/pages/trips/trips.scss
+++ b/src/pages/trips/trips.scss
@@ -2,6 +2,9 @@ page-trips {
   ion-card .trip-not-submitted {
     border: 1px solid color($colors, danger);
   }
+  .delete-trip-button {
+    float: right;
+  }
   ion-card h2 {
     font-size: 1.25em !important;
     margin-top: 0.25em !important;
