Initial work on tutorial images.

--- a/src/pages/tutorial/tutorial.scss
+++ b/src/pages/tutorial/tutorial.scss
@@ -1,8 +1,8 @@
 page-tutorial {
-  .slide-welcome {
-    background-color: #F9EAD7;
+  .slide {
+    font-size: 16px;
   }
-  .slide-map {
-    background-color: #CEF2F4;
+  .illustration {
+    margin: 0 15%;
   }
 }
