--- a/src/pages/tutorial/tutorial.scss
+++ b/src/pages/tutorial/tutorial.scss
@@ -1,8 +1,16 @@
 page-tutorial {
   .slide {
-    font-size: 16px;
+    font-size: 15px;
+  }
+  .slide-zoom {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
   }
   .illustration {
-    margin: 0 15%;
+    flex: 0 1 auto;
+    margin: 0 auto;
+    width: 75%;
   }
 }
